docs: 添加 LLMPLAN 系统核心思想与工作机制文档
- 新增 LlmPlan 系统核心思想文档，详细解析设计哲学和工作机制
- 添加完整的 8 个阶段工作流程说明
- 添加核心设计理念包括语义抽象层、分层决策系统、可组合性、风格驱动
- 添加数据流详解和转换链说明
- 添加核心优势总结

refactor(tools): 优化代码结构和类型检查

- 在 EvalAssemblyCasesMain.java 中使用 switch 表达式替代 if-else 链
- 移除未使用的 ConfigManager 导入
- 优化 RAG 验证逻辑，简化空值检查
- 调整文档字符串格式，使用 <p> 标签替代空行注释

fix(validation): 修复